--- a/edf_pnp_test.ipynb
+++ b/edf_pnp_test.ipynb
@@ -62,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "place_agent_config_dir = \"config/agent_config/place_agent.yaml\"\n",
-    "place_agent_param_dir = \"checkpoint/mug_10_demo/place/model_iter_600.pt\"\n",
+    "place_agent_config_dir = \"config/agent_config/place_agent_dev.yaml\"\n",
+    "place_agent_param_dir = \"checkpoint/mug_10_demo/place_dev/model_iter_110.pt\"\n",
     "max_N_query_place = 3\n",
     "langevin_dt_place = 0.001\n",
     "\n",
@@ -385,7 +385,7 @@
     "for idx in range(10):\n",
     "    place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
     "    \n",
-    "    colcheck_r = 0.003 # Should be similar to voxel filter size\n",
+    "    colcheck_r = 0.0015 # Should be similar to voxel filter size\n",
     "    col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(place_pose)[0], r = colcheck_r)\n",
     "    print(f\"Place Pose_{idx} collision-free: {not col_check}\")\n",
     "    if not col_check:\n",
@@ -432,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
