--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "place_poses = SE3([0.5000, -0.5000, -0.5000, -0.5000, 0.12, -0.18, 0.31])\n",
+    "place_poses = SE3([0.5000, -0.5000, -0.5000, -0.5000, 0.13, -0.20, 0.32])\n",
     "_, pre_place_poses = optimize_pcd_collision(x=scene_raw, y=grasp_raw, \n",
     "                                            cutoff_r = 0.03, dt=0.01, eps=1., iters=5,\n",
     "                                            rel_pose=place_poses)\n",
@@ -266,10 +266,20 @@
     "idx = 0\n",
     "place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
     "\n",
-    "colcheck_r = 0.003 # Should be similar to voxel filter size\n",
+    "colcheck_r = 0.0015 # Should be similar to voxel filter size\n",
     "col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(place_pose)[0], r = colcheck_r)\n",
     "print(f\"Collision-free Place Pose: {not col_check}\")\n",
     "assert not col_check, \"No collision-free place pose found!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DEBUG\n",
+    "# draw_geometry([scene_raw] + grasp_raw.transformed(place_pose))"
    ]
   },
   {
