--- a/demo_load_test.ipynb
+++ b/demo_load_test.ipynb
@@ -32,7 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = demo_seq[0].grasp_pc.to_pcd()"
+    "idx = 1\n",
+    "scene_raw: PointCloud = demo_seq[idx].scene_pc\n",
+    "grasp_raw: PointCloud = demo_seq[idx].grasp_pc\n",
+    "target_poses: SE3 = demo_seq[idx].target_poses"
    ]
   },
   {
@@ -41,15 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_geometry(pcd)"
+    "draw_geometry([scene_raw] + grasp_raw.transformed(target_poses))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
