--- a/edf_pnp_test.ipynb
+++ b/edf_pnp_test.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "from ros_edf.ros_interface import EdfRosInterface\n",
     "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, DemoSeqDataset, save_demos\n",
@@ -28,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,12 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "place_agent_config_dir = \"config/agent_config/place_agent_dev.yaml\"\n",
-    "place_agent_param_dir = \"checkpoint/mug_10_demo/place_dev/model_iter_110.pt\"\n",
+    "place_agent_param_dir = \"checkpoint/mug_10_demo/place_dev/model_iter_300.pt\"\n",
     "max_N_query_place = 3\n",
     "langevin_dt_place = 0.001\n",
     "\n",
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +110,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m[ WARN] [1676447715.926565948]: Link axle_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676447715.926586791]: Link front_rocker_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676447715.926598532]: Link rear_rocker_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676447715.926609095]: Link front_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676447715.926615324]: Link front_lights_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676447715.926623402]: Link left_side_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676447715.926629208]: Link rear_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676447715.926634222]: Link rear_lights_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676447715.926639875]: Link right_side_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676447717.661751]: Commencing scene point cloud update...\n",
+      "[INFO] [1676447718.012462]: Processing received scene point cloud...\n",
+      "[INFO] [1676447718.016503]: Scene pointcloud update success!\n",
+      "[INFO] [1676447718.017006]: Commencing end-effector point cloud update...\n",
+      "[INFO] [1676447718.117677]: Processing received end-effector point cloud...\n",
+      "[INFO] [1676447718.118738]: End-effector pointcloud update success!\n"
+     ]
+    }
+   ],
    "source": [
-    "env_interface = EdfRosInterface(reference_frame = \"scene\")\n",
-    "env_interface.reset()\n",
-    "env_interface.moveit_interface.arm_group.set_planning_time(seconds=5)"
+    "env_interface = EdfRosInterface(reference_frame = \"scene\", planner_id=\"AnytimePathShortening\")\n",
+    "env_interface.set_planning_time(seconds=10.)\n",
+    "env_interface.reset()"
    ]
   },
   {
@@ -125,9 +163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676447731.267777]: Commencing end-effector point cloud update...\n",
+      "[INFO] [1676447732.299485]: Processing received end-effector point cloud...\n",
+      "[INFO] [1676447732.300309]: End-effector pointcloud update success!\n",
+      "[INFO] [1676447732.300865]: Commencing scene point cloud update...\n",
+      "[INFO] [1676447733.200385]: Processing received scene point cloud...\n",
+      "[INFO] [1676447733.204936]: Scene pointcloud update success!\n"
+     ]
+    }
+   ],
    "source": [
     "grasp_raw = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
     "scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
@@ -142,9 +193,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m[ INFO] [1676447715.883688785]: Loading robot model 'ridgeback'...\u001b[0m\n",
+      "\u001b[0m[ INFO] [1676447715.883917289]: No root/virtual joint specified in SRDF. Assuming fixed joint\u001b[0m\n",
+      "\u001b[0m[ INFO] [1676447716.872739310]: Ready to take commands for planning group arm.\u001b[0m\n",
+      "\u001b[0m[ INFO] [1676447717.626289527]: Ready to take commands for planning group gripper.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 999/999 [00:05<00:00, 188.41it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 299/299 [00:09<00:00, 33.07it/s]\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 99/99 [00:00<00:00, 132.62it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "scene_proc = scene_proc_fn(scene_raw).to(device)\n",
     "grasp_proc = grasp_proc_fn(grasp_raw).to(device)\n",
@@ -175,12 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "_, pre_pick_poses = optimize_pcd_collision(x=scene_raw, y=grasp_raw, \n",
-    "                                           cutoff_r = 0.03, dt=0.01, eps=1., iters=50,\n",
+    "                                           cutoff_r = 0.05, dt=0.01, eps=1., iters=7,\n",
     "                                           rel_pose=pick_poses)\n",
     "post_pick_poses = pre_pick_poses"
    ]
@@ -194,9 +265,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pick Pose_0 collision-free: True\n"
+     ]
+    }
+   ],
    "source": [
     "# idx = 0\n",
     "# pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]\n",
@@ -214,18 +293,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hw/Codes/Research/edf_pybullet_ros_experiment/edf_standalone/edf/data.py:237: UserWarning: PointCloud.to_pcd() is deprecated.\n",
+      "  warnings.warn(\"PointCloud.to_pcd() is deprecated.\")\n"
+     ]
+    }
+   ],
    "source": [
-    "pick_result = env_interface.pick(pre_pick_pose, pick_pose, post_pick_pose)\n",
-    "print(pick_result)\n",
-    "assert pick_result, \"Pick Fail\""
+    "# DEBUG\n",
+    "# draw_geometry([scene_raw] + grasp_raw.transformed(post_pick_pose))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676447764.665909]: EDF Moveit Interface: Found a motion plan with length: 10\n",
+      "[INFO] [1676447764.714513]: EDF Moveit Interface: Found a Cartesian plan with length: 71\n",
+      "[INFO] [1676447767.464761]: EDF Moveit Interface: Found a Cartesian plan with length: 71\n",
+      "SUCCESS\n"
+     ]
+    }
+   ],
+   "source": [
+    "pick_result = env_interface.pick(pre_pick_pose, pick_pose, post_pick_pose)\n",
+    "print(pick_result)\n",
+    "assert pick_result == \"SUCCESS\", \"Pick Fail\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,20 +360,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676447806.058445]: EDF Moveit Interface: Found a motion plan with length: 6\n",
+      "SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "# Home position\n",
     "result = env_interface.move_simple(target_poses = SE3([0., 0., 1., 0., -0.1, 0., 0.6]))\n",
-    "print(result)"
+    "print(result)\n",
+    "assert result == 'SUCCESS'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676447809.680715]: Commencing end-effector point cloud update...\n",
+      "[INFO] [1676447810.798758]: Processing received end-effector point cloud...\n",
+      "[INFO] [1676447810.799961]: End-effector pointcloud update success!\n"
+     ]
+    }
+   ],
    "source": [
     "if result == 'SUCCESS':\n",
     "    env_interface.detach()\n",
@@ -281,12 +410,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676447823.551949]: EDF Moveit Interface: Found a motion plan with length: 55\n",
+      "SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "result = env_interface.move_simple(target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.4, 0.4, 0.6]))\n",
-    "print(result)"
+    "print(result)\n",
+    "assert result == 'SUCCESS'"
    ]
   },
   {
@@ -306,7 +445,8 @@
    "outputs": [],
    "source": [
     "result = env_interface.move_simple(target_poses = SE3([0., 0., 1., 0., -0.1, 0., 0.6]))\n",
-    "print(result)"
+    "print(result)\n",
+    "assert result == 'SUCCESS'"
    ]
   },
   {
@@ -382,7 +522,7 @@
    "source": [
     "# idx = 0\n",
     "# place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
-    "for idx in range(10):\n",
+    "for idx in range(0,10):\n",
     "    place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
     "    \n",
     "    colcheck_r = 0.0015 # Should be similar to voxel filter size\n",
@@ -401,7 +541,18 @@
    "outputs": [],
    "source": [
     "result = env_interface.place(pre_place_pose, place_pose, post_place_pose)\n",
-    "print(result)"
+    "print(result)\n",
+    "assert result == 'SUCCESS'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DEBUG\n",
+    "draw_geometry([scene_raw] + grasp_raw.transformed(pre_place_pose))"
    ]
   },
   {
