--- a/edf_pnp_test.ipynb
+++ b/edf_pnp_test.ipynb
@@ -6,7 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ros_edf.ros_interface import EdfRosInterface\n",
+    "%load_ext dotenv\n",
+    "%dotenv\n",
+    "\n",
+    "import sys, os\n",
+    "try:\n",
+    "    from ros_edf.ros_interface import EdfRosInterface\n",
+    "except ModuleNotFoundError:\n",
+    "    sys.path.append(os.path.join(os.getcwd(), 'ros_edf_interface/src/ros_edf/src'))\n",
+    "    from ros_edf.ros_interface import EdfRosInterface\n",
+    "\n",
     "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, DemoSeqDataset, save_demos\n",
     "from edf.pc_utils import optimize_pcd_collision, draw_geometry, check_pcd_collision\n",
     "from edf.preprocess import Rescale, NormalizeColor, Downsample, ApplySE3\n",
@@ -437,7 +446,7 @@
    "outputs": [],
    "source": [
     "# DEBUG\n",
-    "draw_geometry([scene_raw] + grasp_raw.transformed(place_pose))"
+    "# draw_geometry([scene_raw] + grasp_raw.transformed(place_pose))"
    ]
   },
   {
