new engine param for pybullet

--- a/edf_pnp_test.ipynb
+++ b/edf_pnp_test.ipynb
@@ -436,17 +436,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface.release()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# DEBUG\n",
-    "# draw_geometry([scene_raw] + grasp_raw.transformed(place_pose))"
+    "# draw_geometry([scene_raw] + grasp_raw.transformed(pre_place_pose))"
    ]
   },
   {
