--- a/edf_pnp_test.ipynb
+++ b/edf_pnp_test.ipynb
@@ -62,7 +62,8 @@
     "                       max_N_query = max_N_query_pick, \n",
     "                       langevin_dt = langevin_dt_pick).requires_grad_(False)\n",
     "\n",
-    "pick_agent.load(pick_agent_param_dir)"
+    "pick_agent.load(pick_agent_param_dir)\n",
+    "pick_agent.warmup(warmup_iters=10, N_poses=100, N_points_scene=2000)"
    ]
   },
   {
@@ -81,7 +82,8 @@
     "                         max_N_query = max_N_query_place, \n",
     "                         langevin_dt = langevin_dt_place).requires_grad_(False)\n",
     "\n",
-    "place_agent.load(place_agent_param_dir, strict=False)"
+    "place_agent.load(place_agent_param_dir, strict=False)\n",
+    "place_agent.warmup(warmup_iters=10, N_poses=100, N_points_scene=1500, N_points_grasp=900)"
    ]
   },
   {
