--- a/place_eval_test.ipynb
+++ b/place_eval_test.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "place_agent_config_dir = \"config/agent_config/place_agent.yaml\"\n",
-    "place_agent_param_dir = \"checkpoint/mug_10_demo/place/model_iter_600.pt\"\n",
+    "place_agent_config_dir = \"config/agent_config/place_agent_dev.yaml\"\n",
+    "place_agent_param_dir = \"checkpoint/mug_1_demo_dev/place/model_iter_300.pt\"\n",
     "max_N_query_place = 3\n",
     "langevin_dt_place = 0.001\n",
     "\n",
@@ -82,8 +82,7 @@
    "source": [
     "for train_batch in train_dataloader:\n",
     "    for data in train_batch:\n",
-    "        demo_seq_raw: DemoSequence = data['raw']\n",
-    "        demo_seq: DemoSequence = data['processed']\n",
+    "        demo_seq_raw: DemoSequence = data\n",
     "        break\n",
     "    break"
    ]
@@ -179,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
