--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext dotenv\n",
+    "%dotenv\n",
+    "\n",
     "from ros_edf.ros_interface import EdfRosInterface\n",
     "from ros_edf.pc_utils import pcd_from_numpy, draw_geometry, reconstruct_surface\n",
     "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, save_demos\n",
@@ -32,9 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface = EdfRosInterface(reference_frame = \"scene\")\n",
-    "env_interface.reset()\n",
-    "env_interface.moveit_interface.arm_group.set_planning_time(seconds=5)"
+    "env_interface = EdfRosInterface(reference_frame = \"scene\", planner_id=\"AnytimePathShortening\")\n",
+    "env_interface.set_planning_time(seconds=5.)\n",
+    "env_interface.reset()"
    ]
   },
   {
@@ -340,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
