--- a/robot_env_test.ipynb
+++ b/robot_env_test.ipynb
@@ -38,8 +38,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = UR5Env(use_gui=False, debug=True)\n",
+    "env = UR5Env(use_gui=True, debug=True)\n",
     "pos, orn = env.get_link_pose(link_id=env.end_effector_link_id)\n",
+    "# pos, orn = env.get_link_pose(link_id=env.robot_joint_dict['left_finger_z_joint_fake'])\n",
+    "pb_draw_axis(pos=pos, orn=orn, orn_format='quat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(env._get_joint_state(joint_id=env.robot_joint_dict['finger_joint'])[0],\n",
+    "env._get_joint_state(joint_id=env.robot_joint_dict['left_inner_knuckle_joint'])[0],\n",
+    "env._get_joint_state(joint_id=env.robot_joint_dict['left_inner_finger_joint'])[0],)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(env._get_joint_state(joint_id=env.robot_joint_dict['right_outer_knuckle_joint'])[0],\n",
+    "env._get_joint_state(joint_id=env.robot_joint_dict['right_inner_knuckle_joint'])[0],\n",
+    "env._get_joint_state(joint_id=env.robot_joint_dict['right_inner_finger_joint'])[0],)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.grasp(0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.grasp(0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos, orn = env.get_link_pose(link_id=env.robot_joint_dict['finger_z_joint_fake'])\n",
     "pb_draw_axis(pos=pos, orn=orn, orn_format='quat')"
    ]
   },
@@ -82,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
