--- a/edf_pnp_test.ipynb
+++ b/edf_pnp_test.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv\n",
@@ -37,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +58,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warmup with 10 iterations.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:18<00:00,  1.86s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "pick_agent_config_dir = \"config/agent_config/pick_agent.yaml\"\n",
     "pick_agent_param_dir = \"checkpoint/mug_10_demo/pick/model_iter_600.pt\"\n",
@@ -68,9 +93,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warmup with 10 iterations.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:38<00:00,  3.88s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "place_agent_config_dir = \"config/agent_config/place_agent_dev.yaml\"\n",
     "place_agent_param_dir = \"checkpoint/mug_1_demo_dev/place_dev/model_iter_300.pt\"\n",
@@ -88,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +151,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m[ WARN] [1676780272.970517684]: Link axle_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676780272.970533569]: Link front_rocker_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676780272.970544771]: Link rear_rocker_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676780272.970554411]: Link front_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676780272.970559127]: Link front_lights_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676780272.970564521]: Link left_side_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676780272.970569072]: Link rear_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676780272.970573043]: Link rear_lights_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n",
+      "\u001b[33m[ WARN] [1676780272.970577706]: Link right_side_cover_link has visual geometry but no collision geometry. Collision geometry will be left empty. Fix your URDF file by explicitly specifying collision geometry.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m[ INFO] [1676780272.927320590]: Loading robot model 'ridgeback'...\u001b[0m\n",
+      "\u001b[0m[ INFO] [1676780272.927546395]: No root/virtual joint specified in SRDF. Assuming fixed joint\u001b[0m\n",
+      "\u001b[0m[ INFO] [1676780273.990157595]: Ready to take commands for planning group arm.\u001b[0m\n",
+      "\u001b[0m[ INFO] [1676780274.367127192]: Ready to take commands for planning group gripper.\u001b[0m\n",
+      "[INFO] [1676780274.372048]: Commencing scene point cloud update...\n",
+      "[INFO] [1676780274.622821]: Processing received scene point cloud...\n",
+      "[INFO] [1676780274.627980]: Scene pointcloud update success!\n",
+      "[INFO] [1676780274.628521]: Commencing end-effector point cloud update...\n",
+      "[INFO] [1676780275.129064]: Processing received end-effector point cloud...\n",
+      "[INFO] [1676780275.129945]: End-effector pointcloud update success!\n"
+     ]
+    }
+   ],
    "source": [
     "env_interface = EdfRosInterface(reference_frame = \"scene\", planner_id=\"AnytimePathShortening\")\n",
-    "env_interface.set_planning_time(seconds=5.)\n",
+    "env_interface.set_planning_time(seconds=1.)\n",
     "env_interface.reset()"
    ]
   },
@@ -136,9 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676780279.840005]: Commencing end-effector point cloud update...\n",
+      "[INFO] [1676780281.257791]: Processing received end-effector point cloud...\n",
+      "[INFO] [1676780281.258604]: End-effector pointcloud update success!\n",
+      "[INFO] [1676780281.259335]: Commencing scene point cloud update...\n",
+      "[INFO] [1676780282.200742]: Processing received scene point cloud...\n",
+      "[INFO] [1676780282.205720]: Scene pointcloud update success!\n"
+     ]
+    }
+   ],
    "source": [
     "grasp_raw = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
     "scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
@@ -153,9 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 999/999 [00:02<00:00, 346.14it/s]\n",
+      "100%|██████████| 299/299 [00:02<00:00, 110.64it/s]\n",
+      "100%|██████████| 99/99 [00:01<00:00, 98.56it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "scene_proc = scene_proc_fn(scene_raw).to(device)\n",
     "grasp_proc = grasp_proc_fn(grasp_raw).to(device)\n",
@@ -186,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,9 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pick Pose_0 collision-free: True\n"
+     ]
+    }
+   ],
    "source": [
     "# idx = 0\n",
     "# pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]\n",
@@ -225,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,9 +338,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676780291.018370]: EDF Moveit Interface: Found a motion plan with length: 11\n",
+      "[INFO] [1676780291.068277]: EDF Moveit Interface: Found a Cartesian plan with length: 70\n",
+      "[INFO] [1676780293.527779]: EDF Moveit Interface: Found a Cartesian plan with length: 70\n",
+      "SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "pick_result = env_interface.pick(pre_pick_pose, pick_pose, post_pick_pose)\n",
     "print(pick_result)\n",
@@ -246,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,9 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "# Home position\n",
     "# result = env_interface.move_simple(target_poses = SE3([0., 0., 1., 0., -0.1, 0., 0.6]))\n",
@@ -285,9 +407,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676780300.903634]: Commencing end-effector point cloud update...\n",
+      "[INFO] [1676780302.225905]: Processing received end-effector point cloud...\n",
+      "[INFO] [1676780302.226981]: End-effector pointcloud update success!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hw/Codes/Research/edf_pybullet_ros_experiment/edf_standalone/edf/data.py:237: UserWarning: PointCloud.to_pcd() is deprecated.\n",
+      "  warnings.warn(\"PointCloud.to_pcd() is deprecated.\")\n"
+     ]
+    }
+   ],
    "source": [
     "if result == 'SUCCESS':\n",
     "    env_interface.detach()\n",
@@ -304,9 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "# result = env_interface.move_simple(target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.4, 0.4, 0.6]))\n",
     "result = env_interface.move_to_named_target(\"observe\")\n",
@@ -316,9 +464,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676780307.291563]: Commencing scene point cloud update...\n",
+      "[INFO] [1676780308.210434]: Processing received scene point cloud...\n",
+      "[INFO] [1676780308.214655]: Scene pointcloud update success!\n"
+     ]
+    }
+   ],
    "source": [
     "if result == 'SUCCESS':\n",
     "    scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
@@ -326,9 +484,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "# result = env_interface.move_simple(target_poses = SE3([0., 0., 1., 0., -0.1, 0., 0.6]))\n",
     "result = env_interface.move_to_named_target(\"init\")\n",
@@ -352,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,9 +528,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 999/999 [00:04<00:00, 227.73it/s]\n",
+      "100%|██████████| 299/299 [00:03<00:00, 85.54it/s]\n",
+      "100%|██████████| 99/99 [00:01<00:00, 77.66it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "T_seed = 100\n",
     "place_policy = 'sorted'\n",
@@ -391,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,9 +579,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Place Pose_0 collision-free: True\n"
+     ]
+    }
+   ],
    "source": [
     "# idx = 0\n",
     "# place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
@@ -423,9 +607,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] [1676780331.100200]: EDF Moveit Interface: Found a motion plan with length: 39\n",
+      "[INFO] [1676780331.178861]: EDF Moveit Interface: Found a Cartesian plan with length: 6\n",
+      "[INFO] [1676780343.049380]: EDF Moveit Interface: Found a Cartesian plan with length: 8\n",
+      "SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "result = env_interface.place(pre_place_pose, place_pose, post_place_pose)\n",
     "print(result)\n",
@@ -444,9 +639,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "assert result, \"Place fail!\"\n",
     "env_interface.detach()\n",
@@ -470,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
