--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "env_interface = EdfRosInterface(reference_frame = \"scene\", planner_id=\"AnytimePathShortening\")\n",
-    "env_interface.set_planning_time(seconds=5.)\n",
+    "env_interface.set_planning_time(seconds=1.)\n",
     "env_interface.reset()"
    ]
   },
@@ -343,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
